# braid-corda/src/main/kotlin/io/bluebank/braid/corda/swagger/CustomModelConverter.kt
@@ -1,3 +1,18 @@
+/**
+ * Copyright 2018 Royal Bank of Scotland
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package io.bluebank.braid.corda.swagger
 
 import io.swagger.converter.ModelConverter
@@ -33,7 +48,7 @@ class CustomModelConverter : ModelConverter {
                         .example("GfHq2tTVk9z4eXgyUuofmR16H6j7srXt8BCyidKdrZL5JEwFqHgDSuiinbTE")
                         .description("Base 58 Encoded Public Key")
             }
-            if (SecureHash::class.java.isAssignableFrom(clazz)) {
+            if (SecureHash::class.java.isAssignableFrom(clazz) || SecureHash.SHA256::class.java.isAssignableFrom(clazz)) {
                 return StringProperty()
                         .example("GfHq2tTVk9z4eXgyUuofmR16H6j7srXt8BCyidKdrZL5JEwFqHgDSuiinbTE")
                         .description("Base 58 Encoded Secure Hash")
